[package]
authors = ["adoo <Adoo@outlook.com>"]
categories = ["asynchronous"]
description = "A Rust implementation of Reactive Extensions."
documentation = "https://docs.rs/rxrust/"
edition = "2021"
homepage = "https://github.com/rxRust/rxRust"
keywords = ["reactivex", "rx", "frp"]
license = "MIT"
name = "rxrust"
readme = "README.md"
repository = "https://github.com/rxRust/rxRust"
version = "1.0.0-alpha.4"

[dependencies]
fluvio-wasm-timer = "0.2.5"
smallvec = "1.4.2"

[dependencies.async-std]
features = ["unstable"]
version = "1.6.3"

[dependencies.futures]
features = ["thread-pool"]
version = "0.3.5"

[dependencies.tokio]
features = ["rt-multi-thread", "rt"]
optional = true
version = "1.0"

[dependencies.wasm-bindgen-futures]
optional = true
version = "0.4.29"

[dependencies.gloo-timers]
optional = true
version = "0.2.4"

[features]
default = ["futures-scheduler"]
futures-scheduler = []
tokio-scheduler = ["tokio"]
wasm-scheduler = ["wasm-bindgen-futures", "gloo-timers"]

[dev-dependencies]
bencher = "0.1.5"
float-cmp = "0.8.0"
wasm-bindgen-test = "0.3.29"
