[package]
authors = ["adoo <Adoo@outlook.com>"]
categories = ["asynchronous"]
description = "A Rust implementation of Reactive Extensions."
documentation = "https://docs.rs/rxrust/"
edition = "2021"
homepage = "https://github.com/rxRust/rxRust"
keywords = ["reactivex", "rx", "frp"]
license = "MIT"
name = "rxrust"
readme = "README.md"
repository = "https://github.com/rxRust/rxRust"
version = "1.0.0-alpha.4"

[dependencies]
pin-project-lite = "0.2.9"
smallvec = "1.4.2"

[dependencies.futures]
version = "0.3.25"

[dependencies.tokio]
features = ["rt-multi-thread", "rt"]
optional = true
version = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-time = "3.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.29"

[target.'cfg(target_arch = "wasm32")'.dependencies.gloo-timers]
features = ["futures"]
version = "0.2.5"

[features]
default = ["futures-scheduler"]
futures-scheduler = ["futures/thread-pool"]
tokio-scheduler = ["tokio"]

[dev-dependencies]
bencher = "0.1.5"
float-cmp = "0.9.0"
wasm-bindgen-test = "0.3.29"
