[package]
authors = ["adoo <Adoo@outlook.com>"]
categories = ["asynchronous"]
description = "A Rust implementation of Reactive Extensions."
documentation = "https://docs.rs/rxrust/"
edition = "2024"
exclude = ["macros"]
homepage = "https://github.com/rxRust/rxRust"
keywords = ["rx", "reactivex", "frp", "async", "observables"]
license = "MIT"
name = "rxrust"
readme = "README.md"
repository = "https://github.com/rxRust/rxRust"
version = "1.0.0-rc.1"

[dependencies]
crossbeam-utils = "0.8"
pin-project-lite = "0.2.9"
rclite = "0.4"
smallvec = "1.11"

[dependencies.futures-core]
version = "0.3.25"

[features]
default = ["scheduler"]
nightly = []
scheduler = [
  "dep:tokio",
  "dep:wasm-bindgen-futures",
  "dep:gloo-timers",
]

[badges]
codecov = {repository = "rxRust/rxRust"}
dependabot = {package = "cargo"}
docsrs = {status = "true"}
github-actions = {repository = "rxRust/rxRust", branch = "master", workflow = "CI"}
maintenance = {status = "actively-developed"}

[package.metadata.docs.rs]
all-features = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = {version = "1.48", optional = true, features = ["rt-multi-thread", "rt", "time"]}
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = {version = "0.3.0", optional = true, features = ["futures"]}
wasm-bindgen-futures = {version = "0.4.56", optional = true}
web-time = {version = "1.1"}

[dev-dependencies]
bencher = "0.1.5"
futures = "0.3.31"
rxrust-macro = {path = "./macros"}
wasm-bindgen-test = "0.3.56"

# Common dev dependencies for tokio (enabled for testing)
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = {version = "1.48", features = ["rt", "rt-multi-thread", "macros", "time", "sync"]}

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"
